# FASTAPI-BoilerPlates

./: readme.md
postgres_fastapi/backend/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
postgres_fastapi/backend/app/: main.py
postgres_fastapi/backend/app/apis/: apis.py  deps.py
postgres_fastapi/backend/app/apis/crud/: base.py  user_crud.py
postgres_fastapi/backend/app/apis/endpoints/: login.py  posts.py  user.py
postgres_fastapi/backend/app/core/: base.py  config.py  database.py  security.py
postgres_fastapi/backend/app/models/: posts.py  user.py
postgres_fastapi/backend/app/schemas/: jwt.py  post.py  user.py
postgres_fastapi/backend/migrations/: env.py
postgres_fastapi/backend/migrations/versions/: d21b9b27d766_new_migration.py  ec5ffd2fb68c_3.py  f8d7e10a5f97_init.py  fe4e775afa5b_1.py
